# Tulpar-Framework

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_tulpar.py  tulpar.py
.github/workflows/: tulpar_devsecops.yml  tulpar_tarama.yml
tulpar/: __init__.py  __main__.py  ai_analiz.py  analiz.py  dogrulayici.py  entegrasyon.py  k8s_tarayici.py  lambda_handler.py  main.py  onbellek.py  rapor.py  raporlayici.py  sabitler.py  tarayici.py  vektorler.json  vektorler_azure.json  vektorler_gcp.json  web_dashboard.py  yardimcilar.py
tulpar/templates/: grafik.html
