[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tulpar-scanner"
version = "2.2.0"
description = "Kurumsal Cloud IAM Yetki Yukseltme Tarayicisi — AWS, GCP, Azure, Kubernetes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arda Meçik", email = "ardamecik@example.com"},
]
maintainers = [
    {name = "Arda Meçik"},
]
keywords = [
    "aws", "iam", "security", "privilege-escalation", "scanner",
    "gcp", "azure", "kubernetes", "rbac", "cloud-security",
    "red-team", "blue-team", "offensive-security", "pentest",
    "cloudtrail", "bloodhound", "sarif", "devsecops",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.28.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
tui = ["rich>=13.0.0"]
web = ["streamlit>=1.28.0"]
ai = ["openai>=1.0.0", "anthropic>=0.30.0"]
k8s = ["kubernetes>=28.1.0"]
full = [
    "tulpar-scanner[web]",
    "tulpar-scanner[ai]",
    "tulpar-scanner[k8s]",
]
dev = [
    "pytest>=7.0.0",
    "moto>=5.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/mecik-arda/Tulpar-Framework"
Documentation = "https://github.com/mecik-arda/Tulpar-Framework#readme"
Repository = "https://github.com/mecik-arda/Tulpar-Framework.git"
Issues = "https://github.com/mecik-arda/Tulpar-Framework/issues"
Changelog = "https://github.com/mecik-arda/Tulpar-Framework/releases"

[project.scripts]
tulpar = "tulpar.main:ana_fonksiyon"

[project.entry-points.console_scripts]
tulpar-scan = "tulpar.main:ana_fonksiyon"

[tool.setuptools]
packages = {find = {where = ["."], include = ["tulpar*"]}}
include-package-data = true

[tool.setuptools.package-data]
tulpar = ["vektorler.json", "vektorler_gcp.json", "vektorler_azure.json"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.ruff]
line-length = 120
target-version = "py38"
